# Zinc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
bench/: closure_counter.js  fib.js  loop_sum.js  object_create.js  run_all.sh  sieve.js  string_concat.js
bench/sunspider/: 3d-cube.js  access-binary-trees.js  access-fannkuch.js  access-nbody.js  access-nsieve.js  bitops-3bit-bits-in-byte.js  bitops-bitwise-and.js  bitops-nsieve-bits.js  controlflow-recursive.js  math-cordic.js  math-partial-sums.js  run.sh  string-validate-input.js
benches/: benchmarks.rs
docs/: BENCHMARKS.md  JIT.md  SUNSPIDER.md  TEST262.md
src/: engine.rs  lib.rs  main.rs
src/ast/: node.rs  span.rs
src/compiler/: chunk.rs  compiler.rs  disassemble.rs  mod.rs  opcode.rs
src/gc/: heap.rs  mod.rs  trace.rs
src/jit/: arm64.rs  compiler.rs  executable_memory.rs  mod.rs
src/lexer/: cursor.rs  lexer.rs  mod.rs  token.rs
src/parser/: error.rs  expression.rs  mod.rs  parser.rs  statement.rs
src/runtime/: mod.rs  object.rs  value.rs
src/runtime/builtins/: mod.rs
src/util/: interner.rs
src/vm/: builtins.rs  call.rs  generator.rs  json.rs  map.rs  mod.rs  promise.rs  regexp.rs  vm.rs
tests/: e2e_tests.rs  jit_test.rs  parser_tests.rs
tests/e2e/: add.js  basic_math.js  closures.js  closures_test.js  console_test.js  demo.js  fibonacci.js
tools/: test262_runner.rs
web/: index.html
web/pkg/: package.json  zinc.d.ts  zinc.js  zinc_bg.wasm  zinc_bg.wasm.d.ts
