[package]
name = "zinc"
version = "0.2.0"
edition = "2024"
description = "A JavaScript engine written in Rust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
indexmap = "2"
bitflags = "2"
regex = "1"
wasm-bindgen = "0.2"
mimalloc = { version = "0.1", default-features = false, optional = true }

[features]
fast-alloc = ["mimalloc"]

[[bin]]
name = "test262_runner"
path = "tools/test262_runner.rs"

[dev-dependencies]
pretty_assertions = "1"
